--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Samechennault</title>
+    <title>Bolano Quotes</title>
   </head>
 
   <body>
@@ -34,7 +34,9 @@
         <p>This is an experiment to create a page on github.</p>
 
 <p>“Books are finite, sexual encounters are finite, but the desire to read and to fuck is infinite; it surpasses our own deaths, our fears, our hopes for peace.” 
-― Roberto Bolaño</p>
+</p>
+<p>“Reading is like thinking, like praying, like talking to a friend, like expressing your ideas, like listening to other people's ideas, like listening to music, like looking at the view, like taking a walk on the beach.” </p>
+
       </section>
     </div>
 
